Changed file from Rod'sBurger to RodsBurger for readability

--- a/RodsBurger.html
+++ b/RodsBurger.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Rod'sBurger.css">
+        <link rel="stylesheet" type="text/css" href="RodsBurger.css">
         <title>Rod's Burgers</title>
 
     </head>
