--- a/application.html
+++ b/application.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Job application</h1>
-        <a href="Rod'sBurger.html">Return to Main Page</a><br>
+        <a href="RodsBurger.html">Return to Main Page</a><br>
         <hr>
     </header>
     <main>
