--- a/applicationSubmitted.html
+++ b/applicationSubmitted.html
@@ -8,6 +8,6 @@
 <body>
     <h2>Thank you for Applying!</h2>
     <p>You will here back shortly for an interview date.</p>
-    <a href="Rod'sBurger.html">Main Page</a>
+    <a href="RodsBurger.html">Main Page</a>
 </body>
 </html>
