--- a/orderConfirmed.html
+++ b/orderConfirmed.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Order Confirmed</h1>
-   <a href="Rod'sBurger.html">Main Page</a> 
+   <a href="RodsBurger.html">Main Page</a> 
 </body>
 </html>
